redesigned navigation drawer, main container, toolbar

--- a/app/src/main/res/layout-hdpi/activity_auth.xml
+++ b/app/src/main/res/layout-hdpi/activity_auth.xml
@@ -27,8 +27,7 @@
 		android:text="With milions of users\nall around the world"
 		android:fontFamily="@font/nunito_sans_bold"
 		android:textSize="18sp"
-		android:textColor="@color/white"
-		/>
+		android:textColor="@color/white" />
 
 	<Button
 		android:id="@+id/facebook_login_button_delegate"
