--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:id="@+id/drawer_layout"
-    android:windowFullscreen="true"
-    tools:openDrawer="start"
-    tools:context=".ui.main.view.MainActivity"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:fitsSystemWindows="true"
+	android:id="@+id/drawer_layout"
+	tools:openDrawer="start"
+	tools:context=".ui.main.view.MainActivity"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/main_relative">
+	<RelativeLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
 
-        <include layout="@layout/app_bar"
-            android:id="@+id/main_toolbar"/>
+		<include layout="@layout/app_bar"
+			android:id="@+id/main_toolbar"/>
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/main_container"
-                android:layout_below="@id/main_toolbar"/>
+		<RelativeLayout
+			android:id="@+id/main_container"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:background="@color/baseline"
+			android:layout_below="@id/main_toolbar"/>
 
-    </RelativeLayout>
+	</RelativeLayout>
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:color/white"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="14dp"
-        android:fitsSystemWindows="true"
-        android:windowFullscreen="true"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/navigation_items"/>
+	<com.google.android.material.navigation.NavigationView
+		android:id="@+id/nav_view"
+		android:layout_width="wrap_content"
+		android:layout_height="match_parent"
+		android:layout_gravity="start"
+		android:background="@color/baseline"
+		android:divider="@android:color/transparent"
+		android:dividerHeight="14dp"
+		android:fitsSystemWindows="true"
+		android:windowFullscreen="true"
+		app:headerLayout="@layout/nav_header"
+		app:itemTextAppearance="@style/regular_text_white_16sp_85op"
+		app:menu="@menu/navigation_items"/>
 
 
 
