redesigned feed fragment (viewpager 2)

--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -12,6 +12,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/baseline_tint1"
             android:id="@+id/toolbar"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
             app:titleTextAppearance="@style/regular_text_white_20sp_85op"
             app:title="MeetApps"/>
 
