--- a/app/src/main/res/layout/dialog_match.xml
+++ b/app/src/main/res/layout/dialog_match.xml
@@ -19,7 +19,7 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
 		android:layout_gravity="bottom"
-		android:layout_margin="@dimen/activity_vertical_margin"
+		android:layout_margin="@dimen/general_margin_16"
 		android:orientation="vertical">
 
 		<RelativeLayout
