--- a/app/src/main/res/layout/dialog_registration.xml
+++ b/app/src/main/res/layout/dialog_registration.xml
@@ -118,7 +118,7 @@
 
         </co.ceryle.segmentedbutton.SegmentedButtonGroup>
 
-    <com.mmdev.progressbuttonlib.ProgressButton
+    <com.mmdev.meetapp.ui.custom.ProgressButton
         android:layout_height="50dp"
         android:layout_width="match_parent"
         android:id="@+id/diag_reg_btn_done"
