replaced root layouts to constraint layout, removed multiple nested layouts

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -1,44 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
+	android:layout_height="match_parent"
 	android:background="@drawable/background"
 	android:paddingTop="@dimen/notifbar_size_24">
 
 
-
 	<TextView
 		android:id="@+id/tv_logan1"
+		style="@style/auth_slogan1"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_above="@id/tv_logan2"
-		android:layout_centerInParent="true"
 		android:layout_marginBottom="110dp"
 		android:text="Find new\nfriends nearby"
-		style="@style/auth_slogan1"/>
+		app:layout_constraintBottom_toTopOf="@id/tv_logan2"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
 
 	<TextView
 		android:id="@+id/tv_logan2"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_centerInParent="true"
 		android:text="With milions of users\nall around the world"
-		style="@style/auth_slogan2" />
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		style="@style/auth_slogan2"/>
 
 	<Button
 		android:id="@+id/facebook_login_button_delegate"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginBottom="50dp"
 		android:background="@drawable/facebook_btn"
-		android:layout_alignParentBottom="true"
-		android:layout_centerHorizontal="true"
-		android:layout_marginBottom="50dp"/>
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"/>
 
 	<com.facebook.login.widget.LoginButton
 		android:id="@+id/facebook_login_button"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:visibility="gone" />
+		android:visibility="gone"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
