--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="general_margin_16">16dp</dimen>
 	<dimen name="card_margin_fix_rview_8">8dp</dimen>
     <dimen name="notifbar_size_24">24dp</dimen>
+	<dimen name="card_content_margin_8">8dp</dimen>
 </resources>
