--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	android:layout_height="match_parent"
-	android:layout_width="match_parent"
-	android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
 
 	<com.google.android.material.tabs.TabLayout
 		android:id="@+id/tabLayout"
-		android:layout_width="match_parent"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:background="@color/baseline"
 		android:overScrollMode="never"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
 		app:tabIndicator="@color/transparent"
 		app:tabMode="scrollable"
 		app:tabRippleColor="@color/transparent"
@@ -43,8 +45,12 @@
 
 	<androidx.viewpager2.widget.ViewPager2
 		android:id="@+id/viewPager"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:overScrollMode="never"/>
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:overScrollMode="never"
+		app:layout_constraintTop_toBottomOf="@+id/tabLayout"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
