--- a/app/src/main/res/layout/fragment_feed_rv_item.xml
+++ b/app/src/main/res/layout/fragment_feed_rv_item.xml
@@ -11,85 +11,73 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools">
 
-	<LinearLayout
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:orientation="vertical">
+		android:layout_height="match_parent">
 
-		<LinearLayout
-			android:layout_width="match_parent"
+		<ImageView
+			android:id="@+id/feed_publisher_image_view"
+			android:layout_width="32dp"
+			android:layout_height="32dp"
+			android:layout_gravity="center"
+			android:layout_margin="@dimen/card_content_margin_8"
+			android:src="@drawable/default_avatar"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toTopOf="@id/feed_content_image_view"
+			tools:ignore="ContentDescription" />
+
+		<TextView
+			android:id="@+id/feed_publisher_name_view"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:layout_margin="@dimen/general_margin_16"
-			android:orientation="horizontal">
+			android:layout_marginStart="@dimen/card_content_margin_8"
+			android:text="Ivanka Timberlake"
+			app:layout_constraintStart_toEndOf="@id/feed_publisher_image_view"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintTop_toTopOf="@id/feed_publisher_image_view"
+			style="@style/regular_text_white_12sp_85op"/>
 
-			<ImageView
-				android:id="@+id/feed_publisher_image_view"
-				android:layout_width="32dp"
-				android:layout_height="32dp"
-				android:layout_gravity="center"
-				android:src="@drawable/default_avatar"
-				tools:ignore="ContentDescription" />
-
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical"
-				android:layout_marginStart="8dp"
-				android:orientation="vertical">
-
-				<TextView
-					android:id="@+id/feed_publisher_name_view"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Name Surname"
-					style="@style/regular_text_white_12sp_85op"/>
-
-				<TextView
-					android:id="@+id/feed_publish_date"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="2 hours ago"
-					style="@style/regular_text_white_8sp_25op"/>
-
-			</LinearLayout>
-
-		</LinearLayout>
-
-		<LinearLayout
-			android:layout_width="match_parent"
+		<TextView
+			android:id="@+id/feed_publish_date"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_margin="8dp"
-			android:orientation="vertical">
+			android:layout_marginStart="@dimen/card_content_margin_8"
+			android:text="2 hours ago"
+			app:layout_constraintStart_toEndOf="@id/feed_publisher_image_view"
+			app:layout_constraintTop_toBottomOf="@id/feed_publisher_name_view"
+			style="@style/regular_text_white_8sp_25op"/>
 
-			<ImageView
-				android:id="@+id/feed_content_image_view"
-				android:layout_width="match_parent"
-				android:layout_height="200dp"
-				android:background="?attr/selectableItemBackground"
-				android:clickable="true"
-				android:focusable="true"
-				android:maxHeight="250dp"
-				android:scaleType="centerCrop"
-				android:src="@drawable/feed_content_driving_a_car"
-				tools:ignore="ContentDescription" />
 
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="bottom"
-				android:orientation="horizontal">
+		<ImageView
+			android:id="@+id/feed_content_image_view"
+			android:layout_width="0dp"
+			android:layout_height="200dp"
+			android:background="?attr/selectableItemBackground"
+			android:clickable="true"
+			android:focusable="true"
+			android:layout_margin="@dimen/card_content_margin_8"
+			android:maxHeight="250dp"
+			android:scaleType="centerCrop"
+			android:src="@drawable/feed_content_driving_a_car"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintBottom_toTopOf="@id/feed_content_description"
+			app:layout_constraintTop_toBottomOf="@id/feed_publish_date"
+			tools:ignore="ContentDescription"
+			/>
 
-				<TextView
-					android:id="@+id/feed_content_description"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="some text"
-					style="@style/light_text_white_12sp_85op"/>
 
-			</LinearLayout>
+		<TextView
+			android:id="@+id/feed_content_description"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_margin="@dimen/card_content_margin_8"
+			android:text="some text"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			style="@style/light_text_white_12sp_85op"/>
 
-		</LinearLayout>
-
-	</LinearLayout>
+	</androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
