--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-	android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/relativeLayout"
 	android:layout_width="match_parent"
-	xmlns:android="http://schemas.android.com/apk/res/android">
+	android:layout_height="match_parent">
 
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
