--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="wrap_content"
 	android:background="@color/baseline_tint1"
 	android:paddingTop="@dimen/notifbar_size_24">
 
@@ -12,47 +13,49 @@
 		android:id="@+id/settings_button"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignParentEnd="true"
-		android:layout_margin="16dp"
+		android:layout_margin="@dimen/general_margin_16"
 		android:background="?attr/selectableItemBackground"
 		android:clickable="true"
 		android:focusable="true"
 		android:src="@drawable/nav_header_ic_settings_white_24dp"
-		tools:ignore="ContentDescription"/>
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:ignore="ContentDescription" />
 
 	<ImageView
 		android:id="@+id/signed_in_user_image_view"
 		android:layout_width="64dp"
 		android:layout_height="64dp"
-		android:layout_alignParentStart="true"
-		android:layout_margin="16dp"
-		android:src="@color/material_gray_700"
-		tools:ignore="ContentDescription"/>
+		android:layout_margin="@dimen/general_margin_16"
+		android:src="@color/white"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintBottom_toTopOf="@id/signed_in_username_tv"
+		tools:ignore="ContentDescription" />
 
-	<LinearLayout
-		android:layout_width="match_parent"
+
+	<TextView
+		android:id="@+id/signed_in_username_tv"
+		style="@style/regular_text_white_20sp_85op"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_below="@id/signed_in_user_image_view"
-		android:layout_margin="16dp"
-		android:orientation="horizontal"
-		tools:ignore="UseCompoundDrawables">
+		android:layout_margin="@dimen/general_margin_16"
+		android:text="@string/default_name"
+		app:layout_constraintEnd_toStartOf="@+id/arrow_down"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/signed_in_user_image_view" />
 
-		<TextView
-			android:id="@+id/signed_in_username_tv"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:text="@string/default_name"
-			style="@style/regular_text_white_20sp_85op"/>
-
-		<ImageView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="end"
-			android:src="@drawable/nav_header_ic_arrow_down_white_24dp"
-			tools:ignore="ContentDescription" />
+	<ImageView
+		android:id="@+id/arrow_down"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="16dp"
+		android:src="@drawable/nav_header_ic_arrow_down_white_24dp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintBottom_toBottomOf="@id/signed_in_username_tv"
+		app:layout_constraintTop_toTopOf="@+id/signed_in_username_tv"
+		tools:ignore="ContentDescription" />
 
 
-	</LinearLayout>
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
