--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,11 @@
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+	<style name="AlertDialogAnimation">
+		<item name="android:windowEnterAnimation">@anim/alert_enter</item>
+		<item name="android:windowExitAnimation">@anim/alert_exit</item>
+	</style>
+
 
 
 	<!-- auth tv 1 -->
