fixed toolbar scroll issues

--- a/app/src/main/res/layout/fragment_feed_rv_item.xml
+++ b/app/src/main/res/layout/fragment_feed_rv_item.xml
@@ -54,8 +54,8 @@
 			android:layout_width="0dp"
 			android:layout_height="200dp"
 			android:background="?attr/selectableItemBackground"
-			android:clickable="true"
-			android:focusable="true"
+			android:clickable="false"
+			android:focusable="false"
 			android:layout_margin="@dimen/card_content_margin_8"
 			android:maxHeight="250dp"
 			android:scaleType="centerCrop"
