--- a/app/src/main/res/layout/fragment_feed_rv_item.xml
+++ b/app/src/main/res/layout/fragment_feed_rv_item.xml
@@ -1,83 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:layout_marginStart="@dimen/card_margin_fix_rview_8"
-	android:layout_marginBottom="@dimen/card_margin_fix_rview_8"
-	app:cardBackgroundColor="@color/baseline_tint1"
-	app:cardCornerRadius="6dp"
-	app:cardElevation="1dp"
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools">
+	<data>
+<!--		<variable-->
+<!--			name="feedItem"-->
+<!--			type="com.mmdev.business.feed.model.FeedItem" />-->
+		<variable
+			name="feedItem"
+			type="com.mmdev.meetapp.models.FeedItem" />
+		<variable
+			name="user"
+			type="com.mmdev.business.user.model.User" />
+	</data>
 
-	<androidx.constraintlayout.widget.ConstraintLayout
+	<androidx.cardview.widget.CardView
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="wrap_content"
+		android:layout_marginStart="@dimen/card_margin_fix_rview_8"
+		android:layout_marginBottom="@dimen/card_margin_fix_rview_8"
+		app:cardBackgroundColor="@color/baseline_tint1"
+		app:cardCornerRadius="6dp"
+		app:cardElevation="1dp"
+		xmlns:app="http://schemas.android.com/apk/res-auto">
 
-		<ImageView
-			android:id="@+id/feed_publisher_image_view"
-			android:layout_width="32dp"
-			android:layout_height="32dp"
-			android:layout_gravity="center"
-			android:layout_margin="@dimen/card_content_margin_8"
-			android:src="@drawable/default_avatar"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toTopOf="@id/feed_content_image_view"
-			tools:ignore="ContentDescription" />
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
 
-		<TextView
-			android:id="@+id/feed_publisher_name_view"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_marginStart="@dimen/card_content_margin_8"
-			android:text="Ivanka Timberlake"
-			app:layout_constraintStart_toEndOf="@id/feed_publisher_image_view"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toTopOf="@id/feed_publisher_image_view"
-			style="@style/regular_text_white_12sp_85op"/>
+			<ImageView
+				android:id="@+id/feed_publisher_image_view"
+				android:layout_width="32dp"
+				android:layout_height="32dp"
+				android:layout_gravity="center"
+				android:layout_margin="@dimen/card_content_margin_8"
+				android:src="@drawable/default_avatar"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintBottom_toTopOf="@id/feed_content_image_view"
+				tools:ignore="ContentDescription" />
 
-		<TextView
-			android:id="@+id/feed_publish_date"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginStart="@dimen/card_content_margin_8"
-			android:text="2 hours ago"
-			app:layout_constraintStart_toEndOf="@id/feed_publisher_image_view"
-			app:layout_constraintTop_toBottomOf="@id/feed_publisher_name_view"
-			style="@style/regular_text_white_8sp_25op"/>
+			<TextView
+				android:id="@+id/feed_publisher_name_view"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="@dimen/card_content_margin_8"
+				android:text="@{feedItem.feedPublisherName, default = @string/default_name}"
+				app:layout_constraintStart_toEndOf="@id/feed_publisher_image_view"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintTop_toTopOf="@id/feed_publisher_image_view"
+				style="@style/regular_text_white_12sp_85op"/>
 
-
-		<ImageView
-			android:id="@+id/feed_content_image_view"
-			android:layout_width="0dp"
-			android:layout_height="200dp"
-			android:background="?attr/selectableItemBackground"
-			android:clickable="false"
-			android:focusable="false"
-			android:layout_margin="@dimen/card_content_margin_8"
-			android:maxHeight="250dp"
-			android:scaleType="centerCrop"
-			android:src="@drawable/feed_content_driving_a_car"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintBottom_toTopOf="@id/feed_content_description"
-			app:layout_constraintTop_toBottomOf="@id/feed_publish_date"
-			tools:ignore="ContentDescription"
-			/>
+			<TextView
+				android:id="@+id/feed_publish_date"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginStart="@dimen/card_content_margin_8"
+				android:text="@{feedItem.feedSharedTime, default = `2 hours ago`}"
+				app:layout_constraintStart_toEndOf="@id/feed_publisher_image_view"
+				app:layout_constraintTop_toBottomOf="@id/feed_publisher_name_view"
+				style="@style/regular_text_white_8sp_25op"/>
 
 
-		<TextView
-			android:id="@+id/feed_content_description"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_margin="@dimen/card_content_margin_8"
-			android:text="some text"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintBottom_toBottomOf="parent"
-			style="@style/light_text_white_12sp_85op"/>
+			<ImageView
+				android:id="@+id/feed_content_image_view"
+				android:layout_width="0dp"
+				android:layout_height="200dp"
+				android:background="?attr/selectableItemBackground"
+				android:clickable="false"
+				android:focusable="false"
+				android:layout_margin="@dimen/card_content_margin_8"
+				android:maxHeight="250dp"
+				android:scaleType="centerCrop"
+				android:src="@drawable/feed_content_driving_a_car"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintBottom_toTopOf="@id/feed_content_description"
+				app:layout_constraintTop_toBottomOf="@id/feed_publish_date"
+				tools:ignore="ContentDescription"
+				/>
 
-	</androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+			<TextView
+				android:id="@+id/feed_content_description"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_margin="@dimen/card_content_margin_8"
+				android:text="@{feedItem.feedContentDescription, default = `some text description`}"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintBottom_toBottomOf="parent"
+				style="@style/light_text_white_12sp_85op"/>
+
+		</androidx.constraintlayout.widget.ConstraintLayout>
+
+	</androidx.cardview.widget.CardView>
+</layout>
